src/objects/Matrix__c/Matrix__c.object-meta.xml
<CustomObject>
    <label>Phase / Matrix</label>
    <nameField>
        <displayFormat>PHM-{0}</displayFormat>
        <label>Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Phase / Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>