src/objects/Matrix__c/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <label>Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AM Catalog</fullName>
            </value>
            <value>
                <fullName>AM Complex</fullName>
            </value>
            <value>
                <fullName>AM Standard</fullName>
            </value>
            <value>
                <fullName>D&amp;S Complex</fullName>
            </value>
            <value>
                <fullName>D&amp;S PrePriced</fullName>
            </value>
            <value>
                <fullName>D&amp;S Standard</fullName>
            </value>
            <value>
                <fullName>OE Complex</fullName>
            </value>
            <value>
                <fullName>OE Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>