src/objects/Matrix__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <label>Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1.0 Campaign Kickoff</fullName>
            </value>
            <value>
                <fullName>1.1 Customer Plan</fullName>
            </value>
            <value>
                <fullName>1.2 Win Strategy</fullName>
            </value>
            <value>
                <fullName>1.3 Business Strategy</fullName>
            </value>
            <value>
                <fullName>2.0 Proposal</fullName>
            </value>
            <value>
                <fullName>2.1 Pink Team</fullName>
            </value>
            <value>
                <fullName>2.2 Red Team</fullName>
            </value>
            <value>
                <fullName>2.4 Gold Team</fullName>
            </value>
            <value>
                <fullName>2.5 Lessons Learned</fullName>
            </value>
            <value>
                <fullName>Account Plan approval</fullName>
            </value>
            <value>
                <fullName>Award Notification</fullName>
            </value>
            <value>
                <fullName>B&amp;P Budget approval and AeroPORT key code assigned</fullName>
            </value>
            <value>
                <fullName>Bid / No-Bid  (1.4)</fullName>
            </value>
            <value>
                <fullName>Bid / No-Bid decision (Opportunity converted from Lead or unplanned RFI)</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Complete Approval Package / Gain Buy in</fullName>
            </value>
            <value>
                <fullName>Complete opportunity Summary</fullName>
            </value>
            <value>
                <fullName>Contract Signed</fullName>
            </value>
            <value>
                <fullName>Finalize P&amp;DR and Send to pricing</fullName>
            </value>
            <value>
                <fullName>Finalize Proposals</fullName>
            </value>
            <value>
                <fullName>Financials Supplied</fullName>
            </value>
            <value>
                <fullName>Go / No-Go  (1.4)</fullName>
            </value>
            <value>
                <fullName>Greensheet Review</fullName>
            </value>
            <value>
                <fullName>Greensheet review, Proposal submission to customer approved</fullName>
            </value>
            <value>
                <fullName>Greensheet updated with final contracted terms</fullName>
            </value>
            <value>
                <fullName>IPDS 1</fullName>
            </value>
            <value>
                <fullName>IPDS 2A</fullName>
            </value>
            <value>
                <fullName>IPDS Phase 1</fullName>
            </value>
            <value>
                <fullName>IPDS Phase 2A</fullName>
            </value>
            <value>
                <fullName>IPDS Phase 2B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>