src/objects/Matrix__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Campaign_Type__c</columns>
    <columns>Opportunity_Type__c</columns>
    <columns>Phase__c</columns>
    <columns>NAME</columns>
    <columns>Serial_No__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>